--- a/erp_mes/src/main/resources/templates/business/order.html
+++ b/erp_mes/src/main/resources/templates/business/order.html
@@ -34,8 +34,8 @@
                                 		<select id="orderStatus" class="form-select" aria-label="전체">
                                    			<option value="ALL">전체</option>
                                     		<option value="RECEIVED">등록</option>
-                                    		<option value="PREPARING">납품 대기</option>
-                                    		<option value="DELIVERED">납품 완료</option>
+                                    		<option value="INPRODUCTION">생산중</option>
+                                    		<option value="COMPLETION">출하완료</option>
                                     		<option value="CANCELED">취소</option>
                                 		</select>
                                 	</div>
