수주 발주 품목 삭제 오류 수정 + 발주 필수기능 완료

--- a/erp_mes/src/main/resources/templates/purchase/purchaseOrder.html
+++ b/erp_mes/src/main/resources/templates/purchase/purchaseOrder.html
@@ -33,7 +33,7 @@
                             			<label for="purchaseStatus" class="purchaseStatus">진행상태</label>
                                 		<select id="purchaseStatus" class="form-select" aria-label="전체">
                                    			<option value="ALL">전체</option>
-                                    		<option value="REQUEST">신청</option>
+                                    		<option value="REQUEST">요청</option>
                                     		<option value="WAITING">입고대기</option>
                                     		<option value="COMPLETION">입고완료</option>
                                     		<option value="CANCELED">취소</option>
@@ -93,7 +93,7 @@
 								<div class="d-flex justify-content-between align-items-center mb-2">
 									<h5>자재 리스트</h5>
 									<div class="input-group input-group-sm w-50">
-										<input type="text" id="materialSearch" class="form-control" placeholder="품목명 검색">
+										<input type="text" id="materialSearch" class="form-control" placeholder="자재명 검색">
 										<button class="btn btn-outline-secondary" type="button" id="searchmaterialBtn">검색</button>
 									</div>
 								</div>
@@ -102,7 +102,7 @@
 
 							<div class="col-md-6">
 								<div class="d-flex justify-content-between align-items-center mb-2">
-									<h5>발주 품목 목록</h5>
+									<h5>발주 자재 목록</h5>
 								</div>
 								<div id="selectedItemsContainer" class="border p-3" style="min-height: 300px;">
 									<div class="text-center text-muted mt-5" id="emptyMessage">선택된 자재가 없습니다.</div>
