--- a/erp_mes/src/main/resources/templates/qc/qih.html
+++ b/erp_mes/src/main/resources/templates/qc/qih.html
@@ -47,11 +47,37 @@
 			</div>
 			<div id="historyGrid"></div>
 			
-			<hr class="my-5">
+			<div class="card shadow mb-4">
+			    <div class="card-body py-2">
+			        <div class="d-flex align-items-center">
+			            <h2 class="h5 mb-0 me-3">검사 대기 목록</h2><hr>
+			            <div class="form-check form-check-inline">
+			                <input class="form-check-input" type="radio" name="inspectionTypeRadio" id="radioIncoming" value="incoming" checked>
+			                <label class="form-check-label" for="radioIncoming">수입검사</label>
+			            </div>
+			            <div class="form-check form-check-inline">
+			                <input class="form-check-input" type="radio" name="inspectionTypeRadio" id="radioProcess" value="process">
+			                <label class="form-check-label" for="radioProcess">공정검사</label>
+			            </div>
+			            <div class="form-check form-check-inline">
+			                <input class="form-check-input" type="radio" name="inspectionTypeRadio" id="radioPackaging" value="packaging">
+			                <label class="form-check-label" for="radioPackaging">포장검사</label>
+			            </div>
+			        </div>
+			    </div>
+			</div>
 
-			<h2 class="mb-4">검사 대기 목록</h2>
-			<div id="targetGrid"></div>
-		</div>
+			<div class="inspection-grid-container" id="incomingGridContainer">
+			    <div id="incomingGrid"></div>
+			</div>
+
+			<div class="inspection-grid-container" id="processGridContainer" style="display: none;">
+			    <div id="processGrid"></div>
+			</div>
+
+			<div class="inspection-grid-container" id="packagingGridContainer" style="display: none;">
+			    <div id="packagingGrid"></div>
+			</div>
 
 		<div class="modal fade" id="inspectionModal" tabindex="-1" role="dialog" aria-labelledby="inspectionModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered" role="document">
@@ -76,14 +102,8 @@
 								<label>검사유형</label>
 								<input type="text" class="form-control" id="modalInspectionType" readonly>
 							</div>
-							<div class="form-group">
-								<label>실측값</label>
-								<input type="number" class="form-control" id="modalMeasurement" required>
-							</div>
-							<div class="form-group">
-								<label>결과</label>
-								<input type="text" class="form-control" id="modalResult" readonly>
-							</div>
+							<div id="criteriaFields">
+								</div>
 							<div class="form-group">
 								<label>비고</label>
 								<textarea class="form-control" id="modalRemarks" rows="2"></textarea>
@@ -105,6 +125,6 @@
 	<script src="https://uicdn.toast.com/grid/latest/tui-grid.js"></script>
 
 	<script src="/bootstrap/js/qc/qualityHistory.js"></script>
-	</th:block>
+	</th-block>
 </body>
 </html>
