수입검사 저장완료

--- a/erp_mes/src/main/resources/templates/qc/qih.html
+++ b/erp_mes/src/main/resources/templates/qc/qih.html
@@ -84,7 +84,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<h5 class="modal-title" id="inspectionModalLabel">품질검사 등록</h5>
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
 					</div>
@@ -111,7 +111,7 @@
 						</form>
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
 						<button type="button" class="btn btn-primary" id="registerBtn">등록</button>
 					</div>
 				</div>
